Resolves: tdf#154218 Use the proper document's SwCalc locale for formula field

... instead of the format's locale to generate the expanded value
string to be reinterpreted again. i.e. inherited by SwSetExpField
used with Set variable.

Change-Id: I0bb545282a50032f2d8d2965020a36e3c5c8914e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/149911
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins